WanaLyzer/out/numpy/typing/tests/data/fail/npyio.pyi
import numpy as np
import numpy.typing as npt
import pathlib
from typing import IO

str_path: str
bytes_path: bytes
pathlib_path: pathlib.Path
str_file: IO[str]
AR_i8: npt.NDArray[np.int64]
